@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-23T16:17:04Z",
+  "timestamp" : "2024-02-24T01:02:55Z",
   "count_outdated" : 1070,
   "uniques_outdated" : 623,
-  "count" : 1076,
+  "count" : 1077,
   "uniques" : 627,
   "clones" : [
     {
@@ -34,9 +34,9 @@
     },
     {
       "timestamp": "2024-02-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
