@@ -1,3 +1,12 @@
+2024-02-24T01:02:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8027015226 # 144
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-24
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 623 1070 / 627 1076
+* notice: next accum: outdated-unq outdated-all / unq all: 623 1070 / 627 1077
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-02-23]
+
 2024-02-23T16:17:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8021998722 # 143
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-23
